crates/hwp-core/tests/snapshots/snapshot_tests__selfintroduce_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
assertion_line: 622
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title></title>
  <meta http_quiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"함초롬바탕";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"함초롬돋움";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"함초롬돋움";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"함초롬바탕";
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"함초롬돋움";letter-spacing:-0.03em;
}
.cs5 {
  font-size:16pt;color:rgb(0,0,0);font-family:"맑은 고딕";
}
.cs6 {
  font-size:16pt;color:rgb(0,0,0);font-family:"맑은 고딕";
}
.cs7 {
  font-size:16pt;color:rgb(0,0,0);font-family:"맑은 고딕";letter-spacing:-0.04em;
}
.cs8 {
  font-size:16pt;color:rgb(0,0,0);font-family:"맑은 고딕";letter-spacing:-0.04em;
}
.cs9 {
  font-size:16pt;color:rgb(0,0,0);font-family:"맑은 고딕";
}
.ps0 {
  text-align:justify;text-indent:-9.24mm;margin-bottom:0.46mm;
}
.ps1 {
  text-align:justify;margin-bottom:0.56mm;
}
.ps2 {
  text-align:justify;padding-left:7.06mm;margin-bottom:0.56mm;
}
.ps3 {
  text-align:justify;padding-left:14.11mm;margin-bottom:0.56mm;
}
.ps4 {
  text-align:justify;padding-left:21.17mm;margin-bottom:0.56mm;
}
.ps5 {
  text-align:justify;padding-left:28.22mm;margin-bottom:0.56mm;
}
.ps6 {
  text-align:justify;padding-left:35.28mm;margin-bottom:0.56mm;
}
.ps7 {
  text-align:justify;padding-left:42.33mm;margin-bottom:0.56mm;
}
.ps8 {
  text-align:justify;padding-left:49.39mm;margin-bottom:0.56mm;
}
.ps9 {
  text-align:justify;padding-left:10.58mm;margin-bottom:0.56mm;
}
.ps10 {
  text-align:justify;margin-bottom:0.53mm;
}
.ps11 {
  text-align:justify;margin-bottom:0.46mm;
}
.ps12 {
  text-align:justify;margin-bottom:0.56mm;
}
.ps13 {
  text-align:center;margin-bottom:0.56mm;
}
.ps14 {
  text-align:justify;margin-bottom:0.64mm;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps13" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:5.64mm;width:237.00mm;"><span class="hrt cs9" style="font-size:16pt;color:rgb(0,0,0);">나를 소개 합니다</span></div><div class="hls ps12" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:9.03mm;height:5.64mm;width:237.00mm;"></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:18.06mm;height:5.64mm;width:237.00mm;"><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">①&nbsp;</span><span class="hrt cs6" style="font-size:16pt;color:rgb(0,0,0);">이름</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;:&nbsp;</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:28.22mm;height:5.64mm;width:237.00mm;"><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">혈액형</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;: O형</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:38.38mm;height:5.64mm;width:237.00mm;"><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">성격</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;: 자유로운 영혼</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:48.54mm;height:5.64mm;width:237.00mm;"><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">좌우명</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;: A sound mind in a sound body.</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:58.70mm;height:5.64mm;width:237.00mm;"><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">&nbsp;</span><span class="hrt cs5" style="font-size:16pt;color:rgb(0,0,0);">소개하는 글</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:68.86mm;height:5.64mm;width:237.00mm;"><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">어린 시절은 변두리 작은 동네에서 꿈 많은 소녀로 자라났습니다. 할머니, 할아버지, 삼촌들까지&nbsp;</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:79.02mm;height:5.64mm;width:237.00mm;"><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">대가족 속에서 막내로 귀여움을 받으면서 살았습니다. 가족들은 저에게&nbsp;</span><span class="hrt cs8" style="font-size:16pt;color:rgb(0,0,0);">微笑天使</span><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">라고 부르곤 했</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:89.18mm;height:5.64mm;width:237.00mm;"><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">습니다. 가족들의 사랑 덕분에 잘 자라날 수 있었습니다.</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:99.34mm;height:5.64mm;width:237.00mm;"><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">현재 저는 사랑하는 아이들과 남편과 함께&nbsp;</span><span class="hrt cs8" style="font-size:16pt;color:rgb(0,0,0);">행복</span><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">(幸福)한 삶을 살아가고 있습니다. 앞으로의 꿈은&nbsp;</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:109.50mm;height:5.64mm;width:237.00mm;"><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">아이들이 결혼하고 나면 남편과 시골에서 조그마한 텃밭을 가꾸면서 살아가는 것입니다. 그 꿈을&nbsp;</span></div><div class="hls ps14" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:119.66mm;height:5.64mm;width:237.00mm;"><span class="hrt cs7" style="font-size:16pt;color:rgb(0,0,0);">실현할 수 있기를 바랍니다.&nbsp;</span></div></div></div></div></body>

</html>
